@@ -1,3 +1,5 @@
+- library (for draklive-install):
+  o fix not always suggesting /boot/ESP mount point (mga#15689)
 - diskdrake:
   o set pt_type according to fs_type before flag cases (mga#16029)
 - localedrake:
